fixed url scrolling issue on mobile, changed overlay height from vh to %

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ a {
 }
 
 .overlay {
-  height: 100vh;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
